--- a/journal/202301.md
+++ b/journal/202301.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – January 2023
+# Decred Journal – January 2023
 
 ![](../img/202301.1.768.png)
 
@@ -180,7 +180,6 @@ GUI fixes in v0.1.3:
 - Fixed missing [autofocus on the Password field](https://github.com/companyzero/bisonrelay/pull/92) shown after app startup. Also the password can be submitted with the Enter key now.
 - [Fixed](https://github.com/companyzero/bisonrelay/pull/96) unclickable links in post comments, context menu staying open, and images not showing in posts list.
 - Fixed odd [trailing character](https://github.com/companyzero/bisonrelay/pull/100) after links.
-- { 103 } other fixes.
 
 Command-line app changes in v0.1.3:
 
@@ -193,7 +192,6 @@ Command-line app fixes in v0.1.3:
 - Fixed file send being logged to [wrong window](https://github.com/companyzero/bisonrelay/pull/71) and fixed result of `/winlist` command.
 - [Clear certificate field](https://github.com/companyzero/bisonrelay/pull/90) when setting a custom LN liquidity provider address.
 - Fixed error when trying to transfer a [large purchased file](https://github.com/companyzero/bisonrelay/pull/91).
-- { 83 87 } other fixes.
 
 Server changes in v0.1.3:
 
@@ -361,7 +359,7 @@ VSP stakey.com was [delisted](https://github.com/decred/dcrwebapi/pull/171) from
 
 GoDCR SPV wallet was [removed](https://github.com/decred/dcrweb/pull/1104) from the [Wallets page](https://decred.org/wallets/). Download links are no longer working and this wallet is no longer supported/updated as result of the [GoDCR proposal](https://proposals.decred.org/record/0ef42e5) failing to pass. [Source code](https://github.com/planetdecred/godcr) is still available.
 
-New Lightning Network node was [launched](https://www.reddit.com/r/decred/comments/102zzxu/dcr_hive_launches_a_ln_node_and_lowers_fees/) by @kozel at ln.dcrhive.com (standard port 9735). To celebrate the launch his [VSP](https://dcrhive.com/) offered a reduced fee of only 0.1% until Feb 8.  In the future @kozel plans to add an LN Liquidity Provider instance, so anyone who wishes to receive inbound LN capacity to their node will be able to request it.
+New Lightning Network node was [launched](https://www.reddit.com/r/decred/comments/102zzxu/dcr_hive_launches_a_ln_node_and_lowers_fees/) by @kozel at ln.dcrhive.com (standard port 9735). To celebrate the launch his [VSP](https://dcrhive.com/) offered a reduced fee of only 0.1% until Feb 8. In the future @kozel plans to add an LN Liquidity Provider instance, so anyone who wishes to receive inbound LN capacity to their node will be able to request it.
 
 Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat to follow Decred ecosystem updates.
 
@@ -370,10 +368,10 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-Monde PR's achievements: 
+Monde PR's achievements:
 
-- Pitched 2 commentary opportunities 
-- Pitched 4 media opportunities 
+- Pitched 2 commentary opportunities
+- Pitched 4 media opportunities
 
 Secured the following media placements:
 
@@ -461,7 +459,7 @@ _Image: "Time for a Decred hot chocolate" by [@maitreludo](https://twitter.com/m
 
 In January DCR was trading between USDT $18.30-$24.90 and BTC 0.00097-0.00116. The average daily rate was $22.05.
 
-While not on [Decred Magazine](https://www.decredmagazine.com/author/applesaucesome/) recently, @Applesaucesome continues to post $DCR technical analysis and predictions [on Twitter](https://nitter.snopyta.org/applesaucesome1).
+While not on [Decred Magazine](https://www.decredmagazine.com/author/applesaucesome/) recently, @Applesaucesome continues to post $DCR technical analysis and predictions [on Twitter](https://twitter.com/applesaucesome1).
 
 ![](../img/202301.16.720.png)
 
