--- a/journal/202302.md
+++ b/journal/202302.md
@@ -444,6 +444,20 @@ In February DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }
 
 ## Relevant External
 
+{ _Story ideas for December_:
+
+- Fully KYCed Internet by 2027, thanks for protecting us
+  - https://www.technocracy.news/the-pentagon-creates-road-map-for-zero-trust-internet-access-by-2027/
+
+- Binance proof of reserves
+  - https://tokenist.com/binance-improves-proof-of-reserves-system-with-zero-knowledge-verification-method/
+  - find better link if any
+
+- Check CBDC and a few other stories we dropped from 202301 for lack of time
+  - https://github.com/xaur/decred-news/commit/0c43d83
+
+}
+
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
 
 { _Hint: Follow or not follow the suggested grouping of stories below._ }
