add rel ext links

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -456,6 +456,25 @@ In February DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }
 - Check CBDC and a few other stories we dropped from 202301 for lack of time
   - https://github.com/xaur/decred-news/commit/0c43d83
 
+https://www.coindesk.com/business/2023/02/01/facebook-parent-metas-metaverse-division-lost-137b-in-2022/
+
+https://www.coindesk.com/business/2023/02/08/coinbases-ceo-cites-rumors-the-sec-may-ban-crypto-staking-for-retail-customers/
+
+https://blog.oasis.app/statement-regarding-the-transactions-from-the-oasis-multisig-on-21st-feb-2023/
+
+https://optimism.mirror.xyz/lPZEkFF7LU2ZlrO-dsV3p_LtWQUaknFGfxFMgSz3vGA
+
+Kraken settles with SEC? -staking trouble
+https://www.sec.gov/news/statement/peirce-statement-kraken-020923
+
+https://www.coindesk.com/web3/2023/02/10/28-hours-in-the-sewer-yuga-labs-dookey-dash-game-kept-players-running/
+
+https://www.coindesk.com/business/2023/02/09/bitcoin-exchange-localbitcoins-to-close-citing-market-conditions/
+
+https://www.coindesk.com/policy/2023/02/08/unpacking-indias-cbdc-pilots-as-country-prepares-for-digital-rupee/
+
+https://www.coindesk.com/policy/2023/02/13/uae-plans-to-issue-a-cbdc-to-promote-digital-payments/
+
 }
 
 { _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
