--- a/journal/202302.md
+++ b/journal/202302.md
@@ -93,7 +93,9 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-- {}
+In Progress:
+
+- [Update to React v18.](https://github.com/decred/decrediton/pull/3851)
 
 
 ### Politeia
