--- a/journal/202302.md
+++ b/journal/202302.md
@@ -225,7 +225,8 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 { _Check_ https://github.com/decred/dcrdocs/commits/master }
 
-- {}
+- Updated to [mkdocs-material 9](https://github.com/decred/dcrdocs/pull/1214).
+- [Removed](https://github.com/decred/dcrdocs/pull/1216) Font Awesome Icons due to them not working and only appearing on a few pages.
 
 
 ### Dev Docs
