--- a/journal/202302.md
+++ b/journal/202302.md
@@ -86,7 +86,7 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 
 { _Check_ https://github.com/decred/dcrctl/commits/master }
 
-- {}
+- Updated [dependencies](https://github.com/decred/dcrctl/pull/54) to latest modules.
 
 
 ### Decrediton
