--- a/journal/202302.md
+++ b/journal/202302.md
@@ -170,7 +170,7 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 { _Check_ https://github.com/decred/dcrdata/commits/master }
 
-- {}
+- Show [transaction block](https://github.com/decred/dcrdata/pull/1954) on address page.
 
 
 ### Timestamply
