--- a/journal/202302.md
+++ b/journal/202302.md
@@ -151,7 +151,11 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
-- {}
+- Improvements to [VSP closed checks](https://github.com/decred/vspd/pull/369) so that they occur before dcrd/dcrwallet/database clients are initialized, preventing possible errors.
+- Tests are now run as [sub-tests](https://github.com/decred/vspd/pull/365) to enable better reporting of test results and metrics.
+- Added tests for [error handling](https://github.com/decred/vspd/pull/363) in the client that ensure vspd errors are correctly wrapped as 'types.ErrorResponse', and non-vspd errors contain adequate information for debugging.
+- Removed [dcrstakepool instructions](https://github.com/decred/vspd/pull/370) from documentation as it is now defunct.
+- Fixes to [config log levels](https://github.com/decred/vspd/pull/371).
 
 
 ### cspp
