--- a/journal/202302.md
+++ b/journal/202302.md
@@ -437,7 +437,16 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- {}
+- [Bison Relay updates to version 0.1.4](https://youtu.be/Yz-IPu00eDc) by @PhoenixGreen
+- [David Vorick on Fairness in ASIC Production & Proof-of-Work: A Deep Dive Discussion](https://youtu.be/n8Wz5Zx0MSs) by @Tivra Feat. @DavidVorick
+- [Decrediton Peer to Peer Payments - Send & Receive](https://youtu.be/DRWJ9Ajh6II) by @PhoenixGreen
+- [Decrediton SPV mode and importing seed phrase - Decred Fundamentals](https://youtu.be/K1zUdxsrgJM) by @PhoenixGreen
+- [Decred News - ERC20 Pairs on DEX, New Ticket price ATH, exciting new Proposals for DCR DAO & More](https://youtu.be/9fJ92YxL_pU) by @Exitus.
+- [Installing Decrediton in Fully Validating Mode - Decred Fundamentals](https://youtu.be/JxLMi5fWL80) by @PhoenixGreen
+
+Livestream:
+
+- [Decred Roundtable - The Next Crypto Craze](https://www.youtube.com/live/ntJO1Ckmj4M?feature=share) feat. @PhoenixGreen, @Exitus, DCR_Jay, and @Laurent.
 
 **Audio:**
 
@@ -453,7 +462,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 **Non-English content:**
 
-- {}
+- [Weekly Crypto Market Review & Decred](https://youtu.be/ZLBrCKKNkPs) by @FIMA (Croatian).
 
 **Discussions:**:
 
