--- a/journal/202302.md
+++ b/journal/202302.md
@@ -475,7 +475,7 @@ Livestream:
 
 ## Markets
 
-In February DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ five decimals }. The average daily rate was ${n.nn}.
+In February DCR was trading between USDT 21.71-28.52 and BTC 0.00095-0.00121. The average daily rate was $24.03.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis. Check here:_
 
