add selected articles

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -429,7 +429,11 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 **Selected articles:**
 
-- {}
+- [Decred vs Firo: privacy and governance!](https://www.decredmagazine.com/decred-vs-firo-privacy-and-governance/) by @JoaoPaulo
+- [Internet Privacy and Why it is Important](https://www.decredmagazine.com/internet-privacy-and-why-it-is-important/) by @BlockchainJew
+- [$3.8 billion worth of crypto stolen! What can be done?](https://www.decredmagazine.com/u-3-8-billion-worth-of-crypto-stolen-what-can-be-done/) by @JoaoPaulo
+- [Middlemen need to be eliminated from the cryptocurrency space](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) by @HassanMaishera
+
 
 **Videos:**
 
