--- a/journal/202302.md
+++ b/journal/202302.md
@@ -12,9 +12,9 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- DEX v0.5.9 release
+- Decred turned 7 years
 
-- 
+- DEX v0.5.9 release
 
 - 
 
@@ -46,9 +46,16 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 
 ## DCRDEX v0.5.9 Release
 
-{ highlights, links }
+v0.5.9 was released with v0.6 just around the corner to enable automatically deployed Docker images for Umbrel. However, there are many other fixes in this release that were backported from v0.6 development:
 
-- v0.5.9 backports a number of important fixes since around December 2022. For developers packaging DCRDEX (e.g. in Umbrel app store) it also adds a Git tag with the new Docker builds.
+- Improved client database compaction to save disk space.
+- More accurate swap fee estimates.
+- Zero fee swaps are prevented.
+- Improved performance.
+- Cleaned up logging.
+- Fixed about a dozen of edge cases.
+
+Full release notes and standalone DEX app downloads can be found [here](https://github.com/decred/dcrdex/releases). Hashes and signatures files are included that allow to [verify](https://docs.decred.org/advanced/verifying-binaries) the downloads have not been damaged or modified by third parties.
 
 
 ## Development
@@ -185,43 +192,53 @@ Changes made in `master` and backported to v0.5.9 release:
 - Fixed client trying to run when [accounts database](https://github.com/decred/dcrdex/pull/2119) failed to load.
 - Backported [~14 other fixes](https://github.com/decred/dcrdex/pull/2153) from `master` made in December-January. { _ef84b8e to fa877c2, inclusive_ }
 
-All other changes below are in the `master` branch towards the next release.
+All other changes below are in the `master` branch towards the next [v0.6 release](https://github.com/decred/dcrdex/milestone/22).
 
 Client changes:
 
-- Made more strings [translatable](https://github.com/decred/dcrdex/pull/2065) { _minor, group_ }
+- Made more strings [translatable](https://github.com/decred/dcrdex/pull/2065) { _minor_ }
 - Handle more edge cases during [server certificate change](https://github.com/decred/dcrdex/pull/2019).
 - Hide [order form](https://github.com/decred/dcrdex/pull/2054) if asset version is not supported.
 - Show [fees as a percentage](https://github.com/decred/dcrdex/pull/2110) of the order for token assets, if fiat rates are available for both the token and its parent asset.
-- Made whole order row [clickable](https://github.com/decred/dcrdex/pull/2117) to expand it. { _minor, group_ }
+- Made whole order row [clickable](https://github.com/decred/dcrdex/pull/2117) to expand it. { _minor_ }
 - Allow to connect to a DEX server [in view-only mode](https://github.com/decred/dcrdex/pull/1986) (without registration), browse markets and see order books.
 
 Client, fidelity bonds progress:
 
-- Implemented main [bond lifecycle](https://github.com/decred/dcrdex/pull/2036) machinery for the client, including automatic bond rotation. When current bond is about to expire, it must be replaced by another bond at correct time to continue using the DEX without interruption. A [diagram](https://github.com/decred/dcrdex/blob/7603ead02dc6e040e69b50f8796e3f23aac06e1b/client/core/bond.go#L49) was added to explain the rather complex lifecycle of bonds. { _use project link https://github.com/orgs/decred/projects/2/views/1_ }
+- Implemented main [bond lifecycle](https://github.com/decred/dcrdex/pull/2036) machinery for the client, including automatic bond rotation. When current bond is about to expire, it must be replaced by another bond at correct time to continue using the DEX without interruption. A [diagram](https://github.com/decred/dcrdex/blob/7603ead02dc6e040e69b50f8796e3f23aac06e1b/client/core/bond.go#L49) was added to explain the rather complex lifecycle of bonds.
 - Implemented maintenance of [bond funds reserves](https://github.com/decred/dcrdex/pull/2103). A portion of wallet's funds will be reserved for future bonds plus a buffer for transaction fees. When reserves are enforced, transactions like wallet withdraws or trading orders will be restricted to a lower available balance. Wallet balance report will show funds locked in existing bonds and reserved for future bonds. Bonds will use coin selection strategy that is different from one that funds trading orders. Orders try to consume few outputs to minimize fees, while bonds try to minimize the amount of DCR locked. Pre-sizing of inputs for swap transactions was enabled by default for DCR because it benefits bond management and DCR fees are cheap now. It will not be possible to disable accounts that have unspent bonds. Initial implementation supports only DCR bonds but the foundations have been added to allow bonds in other assets.
+- Changed registration UI flow to [create a bond]({}) instead of paying a fee. User will have a choice how strong the bond should be. If account tier is below the trading level and there are pending bonds, Markets page will show confirmation counter for pending bonds. Post Bond feature was added to Settings page for manual bond posting.
+- Optimized DCR [coin selection](https://github.com/decred/dcrdex/pull/2169) algorithm to find a set of outputs having total DCR closer to the target amount.
+- Completed, in progress and remaining tasks for the bonds subsystem can be seen on [this dashboard](https://github.com/orgs/decred/projects/2/views/1).
 - In the big picture, [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) are needed to transition from users *paying fees* to the server, to users *locking funds* while they use the server. Both approaches protect the server from spam and other undesired behavior. Bonds are more complex than fees but have advantages. Users can return locked funds when they no longer want to trade, and also bonds support the transition from standalone servers to a decentralized [server mesh](https://github.com/decred/dcrdex/issues/1765) (with the fees system it would be unclear which servers should collect fees).
 
 Client fixes: { _join too small/uninteresting fixes in groups_ }
 
 - ~{ 2116 } UI fixes.
-- Fixed { 2097 2092 2132 } concurrency bugs.
+- Fixed { 2097 2092 2132 2178 } concurrency bugs.
 - Fixed creating [token wallet](https://github.com/decred/dcrdex/pull/2121) when the parent wallet has not yet been created.
 - Fixed [order status](https://github.com/decred/dcrdex/pull/2140) discrepance on different views.
 - Fixed confusing [sync progress](https://github.com/decred/dcrdex/pull/2133) reporting on Register page.
+- Fixed repeated re-fetching of [asset icons](https://github.com/decred/dcrdex/pull/2163).
+- Fixed failure to withdraw [all available DCR](https://github.com/decred/dcrdex/pull/2170) from the wallet.
+- Fixed [cursor and sort direction](https://github.com/decred/dcrdex/pull/2172) on the recent matches table.
+- Fixed [missing explorer links](https://github.com/decred/dcrdex/pull/2181) for funding coins on order details page.
+- Fixed [wallet balance](https://github.com/decred/dcrdex/pull/2183) not getting updated after funding an order.
 
 Other changes:
 
 - Improved [test logs](https://github.com/decred/dcrdex/pull/2063) to better explain what is happening.
 - Added [miner nodes](https://github.com/decred/dcrdex/pull/2150) to test harnesses. { _cryptic, group_ }
-- Fixed { 2108 2131 } flaky tests { _minor, group_ }
-- Fixed docs { 2107 } { _minor, group_ }
+- Use [Docker login](https://github.com/decred/dcrdex/pull/2167) action and made `apt-get` non-interactive. { _cryptic, group_ }
+- Added [database upgrade](https://github.com/decred/dcrdex/pull/2166) logic to correct archived match status. { _minor_ }
+- Fixed { 2108 2131 } flaky tests { _minor_ }
+- Fixed docs { 2107 } { _minor_ }
 - Server fixes { 2149 }
 
 Ethereum:
 
 - Added ability for the DEX server to use [multiple Ethereum data providers](https://github.com/decred/dcrdex/pull/2104) and switch to another provider if the current one does not serve needed data.
-- Simplified handling of [best known block](https://github.com/decred/dcrdex/pull/2105). { _minor, group_ }
+- Simplified handling of [best known block](https://github.com/decred/dcrdex/pull/2105). { _minor_ }
 - Clarified API [versioning](https://github.com/decred/dcrdex/pull/2094) of ETH and its child token assets. For now token assets will use the same version as the parent asset. These version numbers will be used to determine if different clients and servers and their components are compatible. { _did not fully grasp what these versions control and added a general explainer. Also it is minor and free to group._ }
 - Removed the [`isRedeemable` method](https://github.com/decred/dcrdex/pull/2111) from Solidity smart contracts for ETH and ERC-20 swaps, and disabled the use of `estimateRedeemGas` call. Both methods reveal a secret to the Ethereum node ahead of the redeem transaction. This was not a problem when the client was using a private node, but it becomes a vulnerability with public RPC providers, which DEX is forced to use since The Merge. Solidity compiler was updated to v0.8.18.
 - Added monitoring of [RPC provider health](https://github.com/decred/dcrdex/pull/2125). Previously, ETH backend would only start if all configured providers could be connected to and had an updated blockchain. Now ETH backend will start if at least one provider connection works and reports a fresh block. After connection is established providers will be continuously monitored for healthy responses and the best providers will be used first.
@@ -231,9 +248,12 @@ Ethereum:
 - Improved management of [known and compliant RPC providers](https://github.com/decred/dcrdex/pull/2102).
 - Build with `go-ethereum` code [by default](https://github.com/decred/dcrdex/pull/2157). There is now a `nolgpl` build flag to build DEX without Ethereum code, which is licensed as GNU Lesser General Public License (LGPL). The burden of this license may be unacceptable for closed source software.
 - Create wallet dir if it does not exist and [log less details](https://github.com/decred/dcrdex/pull/2159) for RPC provider checks.
+- Enabled ETH and USDC on [mainnet](https://github.com/decred/dcrdex/pull/2013). Adjusted gas limits for latest observation. Reduced redeem transaction confirmations from 10 to 3 since reorgs are [considered](https://github.com/decred/dcrdex/commit/5c1ff8ab05a43b431f6d8e091692c32ea181e937) very unlikely after The Merge. Smart contract enthusiasts can find swap contract for for ETH [here](https://etherscan.io/address/0x8c17e4968b6903e1601be82ca989c5b5e2c7b400#code), for ERC-20 [here](https://etherscan.io/address/0x1bbd020ddd6dc01f974aa74d2d727b2a6782f32d#code).
 - Fixed new block headers not being detected over [WebSockets](https://github.com/decred/dcrdex/pull/2091).
 - Fixed attempts to handle [tip change](https://github.com/decred/dcrdex/pull/2138) event for unconnected token wallets.
 - Fixed attempts to use RPC providers that serve [too old block headers](https://github.com/decred/dcrdex/pull/2074) (i.e. are not synced with the network).
+
+{ _optional: explain how The Merge complicated things and delayed v0.6, scan #DEX_ }
 
 
 ### dcrdata
