--- a/journal/202302.md
+++ b/journal/202302.md
@@ -524,7 +524,7 @@ In February DCR was trading between USDT 21.71-28.52 and BTC 0.00095-0.00121. Th
 
 - Binance proof of reserves
   - https://tokenist.com/binance-improves-proof-of-reserves-system-with-zero-knowledge-verification-method/
-  - find better link if any
+  - find better link if any {RR: cointelegraph is the most "reputable" link I could find, it reads like they paid for the article https://cointelegraph.com/news/binance-upgrades-proof-of-reserves-verification-to-include-zk-snarks. The places which were most sceptical of Binance's proof of reserves have not covered this development, and the stories I see about it don't say whether it addresses the previously established deficiencies of Binance PoR}
 
 - Check CBDC and a few other stories we dropped from 202301 for lack of time
   - https://github.com/xaur/decred-news/commit/0c43d83
@@ -535,9 +535,13 @@ Crypto exchange Kraken has [settled](https://www.sec.gov/news/press-release/2023
 
 The Oasis DeFi protocol was used to "[counter-exploit](https://www.blockworksresearch.com/research/we-do-a-little-counter-exploit)" the hacker who stole 120,000 ETH from the Wormhole bridge in Feb 2022 and steal back funds they had deposited in the platform, after its developers were [ordered](https://blog.oasis.app/statement-regarding-the-transactions-from-the-oasis-multisig-on-21st-feb-2023/) to by a British High Court. After the Wormhole Bridge was exploited last year, Jump Crypto (its VC backer) stepped in to make users whole and has since been tracking the stolen funds with a view to retrieval. As [reported](https://blockworks.co/news/jump-crypto-wormhole-hack-recovery) by Blockworks, Jump Crypto likely played a key role in the retrieval, they provided funds to reclaim the collatoral and close open positions and it is likely they are also the "Whitehat group" referenced in the Oasis blog post who provided a proof of concept on how the assets could be retrieved. The counter-exploit involved an upgradeable contract and adding a new signer to the 4-of-12 multisig that owns the Oasis contracts. It is not clear what the process was to generate the court order to perform the exploit.
 
-https://www.coindesk.com/business/2023/02/01/facebook-parent-metas-metaverse-division-lost-137b-in-2022/
+Facebook parent Meta [reported](https://www.coindesk.com/business/2023/02/01/facebook-parent-metas-metaverse-division-lost-137b-in-2022/) losses of $13.7 Billion in its Metaverse Division for 2022, and warned that the losses would accelerate further in 2023.
 
-https://optimism.mirror.xyz/lPZEkFF7LU2ZlrO-dsV3p_LtWQUaknFGfxFMgSz3vGA
+
+
+Optimism, a layer 2 Etherem chain, [performed](https://optimism.mirror.xyz/lPZEkFF7LU2ZlrO-dsV3p_LtWQUaknFGfxFMgSz3vGA) its second airdrop, sending 11.7 million OP tokens to over 300,000 addresses. This airdrop rewarded users who delegated their OP for governance, and users who spent more than $6 on gas fees, along with multipliers for delegating more for longer or using more gas. Optimism is committed to distributing 19% of its supply in airdrops, and the first one in May 2022 distributed 5%. 
+
+
 
 https://www.coindesk.com/web3/2023/02/10/28-hours-in-the-sewer-yuga-labs-dookey-dash-game-kept-players-running/
 
