--- a/journal/202302.md
+++ b/journal/202302.md
@@ -344,17 +344,15 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In February the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at February's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at February's rate, or ${} at January's billing rate of ${}.
+In February the new [treasury](https://dcrdata.decred.org/treasury) received 7,620 DCR worth $183K at February's average rate of $24.03. 3,389 DCR was spent to pay contractors, worth $81K at February's rate, or $75K at January's billing rate of $22.05. 
 
-The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
+The [treasury spend tx](https://explorer.dcrdata.org/tx/e09505dbb877e5efdd184129858be5655a3de235cdac2cfa749442f0ccf7de81) had 27 outputs making payments to contractors, ranging from 3 DCR to 1,084 DCR. Most of this DCR was likely paid for December invoices, there is now a persistent lag between the end of the month and the creation of the Tspend for that month, so that by the time transactions are approved by stakeholders it is typically two months after the month when work was conducted.
 
 { _Other interesting facts/stories about the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Mar 14, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 844,504 DCR (16.8 million USD at $19.88).
 
-{ _High-level recap of decision-making activity and most important events._ }
-
-- {}
+There were no new proposals published in Feb, and the proposals which finished voting in the month were covered in the January issue of the Journal.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
