--- a/journal/202302.md
+++ b/journal/202302.md
@@ -414,6 +414,19 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
 
+Monde PR’s achievements: 
+
+- Secured one media interview
+- Pitched three commentary opportunities 
+- Pitched four media opportunities 
+
+Secured the following media placements:
+
+- Bison Relay was featured in [Blockworks](https://blockworks.co/news/web3-social-media-apps-to-watch ) as ‘Web3 social media pp to watch.’
+- A Decred [Magazine article](https://www.decredmagazine.com/planbs-s2f-model-is-flawed/) featuring commentary from @jz on the flaws in PlanB’s S2F model.
+- A [Decred Magazine article](https://www.decredmagazine.com/middlemen-need-to-be-eliminated-from-the-cryptocurrency-space/) featuring commentary from @jz on eliminating middlemen from cryptocurrency space. 
+
+
 ## Events
 
 { _Hint: Summarize any important or interesting facts about each event. Link to https://decredcommunity.github.io/events/index/ for detailed reports._ }
