--- a/journal/202302.md
+++ b/journal/202302.md
@@ -18,7 +18,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Bison Relay v0.1.4 release
 
-- 
+- Oprah bot - clarify with someone familiar if it is a real opportunity to earn
 
 - 
 
@@ -60,7 +60,15 @@ Full release notes and standalone DEX app downloads can be found [here](https://
 
 ## Bison Relay v0.1.4 Release
 
-{ highlights, links }
+{ highlights, links, video overview Yz-IPu00eDc }
+
+- Everything works faster.
+- Streamlined downloading process at the [downloads page](https://bisonrelay.org/download/).
+- Adjustable font size.
+- Image and link attachments.
+- Tipping bot that rewards authors of valuable content.
+- Right-side panel for easier access to actions on users and group chats.
+- Many other UX improvements.
 
 
 ## Development
@@ -291,17 +299,40 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new peer-to-peer 
 
 }
 
-GUI client changes in v0.1.4:
+Common changes GUI and CLI apps in v0.1.4:
+
+- Added support for paying and sending [multiple messages in parallel](https://github.com/companyzero/bisonrelay/pull/98) without waiting for server ack.
+- Upgraded to build and test against [Go 1.20](https://github.com/companyzero/bisonrelay/pull/127) { _minor_ }
+- [Store received messages](https://github.com/companyzero/bisonrelay/pull/110) so that `clientrpc` users may retrieve them. This prevents missed messages in bots and other automation tools.
+- Added support for [sending and rendering of embeds](https://github.com/companyzero/bisonrelay/pull/118) (images, other attachments, and download links) in private and group chats.
+
+GUI app changes in v0.1.4:
 
 - Added [font size setting](https://github.com/companyzero/bisonrelay/pull/117) with 4 size choices.
+- Moved menu actions on users and group chats (List Posts, Pay Tip, etc.) to the right-side [panel](https://github.com/companyzero/bisonrelay/pull/119). This is similar to Element and easier to use.
+- Order of chat lists is [saved](https://github.com/companyzero/bisonrelay/pull/111) across app restarts.
+- Use [emoji font](https://github.com/companyzero/bisonrelay/commit/41fd091af874512d7a3d941f094c1615e54ee70b) to render more characters.
 
-Command-line client fixes in v0.1.4:
+Command-line app changes in v0.1.4:
+
+- Dependency upgrades { 129 }
+- Removed initial [connection timeouts](https://github.com/companyzero/bisonrelay/pull/128) which are no longer needed since the user can reliably quit the app during startup.
+- Removed quitting the app with Ctrl+C (Ctrl+Q remains).
+- Removed [auto-scroll to bottom](https://github.com/companyzero/bisonrelay/commit/9324add82f4f7bd5317a31f14c8f78618e79e856) if the view was not at the bottom to begin with.
+- Alert current window of [completed download](https://github.com/companyzero/bisonrelay/commit/fdad19d95a140125019daa5bbb929ed6892df2f2).
+- Added [unread message marker](https://github.com/companyzero/bisonrelay/commit/e03164fcdf3c168cb772bde17310a003de8418f6) to inactive windows.
+
+Command-line app fixes in v0.1.4:
 
 - Other fixes { 115 }
 
 Server changes in v0.1.4:
 
-- Added support for accepting multiple messages [concurrently](https://github.com/companyzero/bisonrelay/pull/97), which makes sending much faster. By default a connected client can request up to 8 invoices for message sending, before needing to pay for them. Server must detect the payment within 24 hours, otherwise a new payment will be required.
+- Added support for accepting multiple messages [concurrently](https://github.com/companyzero/bisonrelay/pull/97), which makes sending much faster. By default a connected client can request up to 8 invoices for message sending, before needing to pay for them. Server must detect the payment within 24 hours, otherwise a new payment will be required. Production server may use other config values for this.
+
+Other stuff:
+
+- Oprah is out. It is a tipping bot following and rewarding authors of substantive posts or comments. { https://www.youtube.com/watch?v=Yz-IPu00eDc&t=113s }
 
 
 ### Other
