--- a/journal/202302.md
+++ b/journal/202302.md
@@ -68,6 +68,7 @@ Full release notes and standalone DEX app downloads can be found [here](https://
 - Image and link attachments.
 - Tipping bot that rewards authors of valuable content.
 - Right-side panel for easier access to actions on users and group chats.
+- More robust key exchange maintenance.
 - Many other UX improvements.
 
 
@@ -305,6 +306,11 @@ Common changes GUI and CLI apps in v0.1.4:
 - Upgraded to build and test against [Go 1.20](https://github.com/companyzero/bisonrelay/pull/127) { _minor_ }
 - [Store received messages](https://github.com/companyzero/bisonrelay/pull/110) so that `clientrpc` users may retrieve them. This prevents missed messages in bots and other automation tools.
 - Added support for [sending and rendering of embeds](https://github.com/companyzero/bisonrelay/pull/118) (images, other attachments, and download links) in private and group chats.
+- Tracking of encryption status and [key exchange (KX) resets](https://github.com/companyzero/bisonrelay/pull/116) were made easier. Added semi-automatic tools to detect and reset possibly broken key exchanges. Candidates for reset are users from which no messages have been received for a long time, or own client that has been offline for a long time.
+- Improved handling of new [group chat messages](https://github.com/companyzero/bisonrelay/pull/130) received just after connecting to the server. This should properly order messages by time, especially on slower connections.
+- Added API method to [close the socket](https://github.com/companyzero/bisonrelay/pull/133). { _minor_ }
+- Fixed a bug that prevented [clean shutdown](https://github.com/companyzero/bisonrelay/commit/ec5637968937439eb8752aa41200947051b2f8c0) in some cases.
+- Fixed a possibility of client trying to [reuse message payment](https://github.com/companyzero/bisonrelay/pull/131), leading to connection loops.
 
 GUI app changes in v0.1.4:
 
@@ -329,6 +335,33 @@ Command-line app fixes in v0.1.4:
 Server changes in v0.1.4:
 
 - Added support for accepting multiple messages [concurrently](https://github.com/companyzero/bisonrelay/pull/97), which makes sending much faster. By default a connected client can request up to 8 invoices for message sending, before needing to pay for them. Server must detect the payment within 24 hours, otherwise a new payment will be required. Production server may use other config values for this.
+
+Common changes GUI and CLI apps `master` towards the next release (v0.1.5):
+
+- Added a [warning](https://github.com/companyzero/bisonrelay/pull/139) alerting the user of LN invoice generation failure and suggesting to increase receive capacity.
+- Added [versioning of group chats](https://github.com/companyzero/bisonrelay/pull/140) and a warning when receiving an unsupported group chat version.
+- Added a command to [resend group chat info](https://github.com/companyzero/bisonrelay/commit/dc63dafcad9dad4e1db105418e642ea50349896f) to its members to fix issues with the user list getting out of sync.
+- Fixed [group chat message ordering](https://github.com/companyzero/bisonrelay/pull/136) after app restart.
+
+GUI app changes in `master`:
+
+- Added a horizontal line marking the start of received [unread messages](https://github.com/companyzero/bisonrelay/pull/137). Removed display of avatar and username if subsequent messages come from the same author.
+- Added total DCR [sent and received](https://github.com/companyzero/bisonrelay/pull/146) summaries to Payment Stats page.
+- Added [QR codes](https://github.com/companyzero/bisonrelay/pull/148) for deposit addresses.
+- Hide [advanced fields](https://github.com/companyzero/bisonrelay/pull/150) by default on screens prompting to open more inbound/outbound LN channels.
+- Fixed loss of [active chat](https://github.com/companyzero/bisonrelay/pull/145) selection when opening Chats section.
+
+CLI app changes in `master`:
+
+- Simplified code for opening channels and [requesting receive capacity](https://github.com/companyzero/bisonrelay/pull/147).
+- Allow to specify custom [addresses](https://github.com/companyzero/bisonrelay/pull/149) that the embedded dcrlnd instance will listen to instead of the default `127.0.0.1`. This gives more flexibility in connecting to it.
+- Improved [text wrapping](https://github.com/companyzero/bisonrelay/pull/132) and rendering of multiline elements.
+
+Other changes in `master`:
+
+- Added [key exchange mediation](https://github.com/companyzero/bisonrelay/pull/134) request via automation API. { _too internal_ }
+- Added [author nickname](https://github.com/companyzero/bisonrelay/pull/151) to post status updates in the automation API. { _group?_ }
+- Test fixes { 138 }
 
 Other stuff:
 
