add twitter space + discussion

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -558,7 +558,9 @@ Livestream:
 
 **Audio:**
 
-- {}
+Twitter Spaces:
+
+- [Decred’s 7th Birthday Bash](https://twitter.com/decredproject/status/1622721223913271299) by @Tivra Feat. Decred Community.
 
 **Art and fun:**
 
@@ -578,7 +580,8 @@ From the article:
 
 **Discussions:**:
 
-- { _Interesting discussions that generated new ideas or perspectives_ }
+- [360 DCR per ticket, is this a record high?](https://www.reddit.com/r/decred/comments/10qtjtj/360_dcr_per_ticket_is_this_a_record_high/) by u/box-bolt
+
 
 **Other:**
 
