--- a/journal/202302.md
+++ b/journal/202302.md
@@ -92,34 +92,33 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-Multi:
+General:
 
-- Now uses new [atomic types](https://github.com/decred/dcrd/pull/3053) in unexported modules thanks to go 1.19.  This makes the code less prone to human error and a bit less verbose. { _mention exported modules done separately in 3054 to care about the consumers_ }
-- Added a forced deployment result [network parameter](https://github.com/decred/dcrd/pull/3060) to specify a vote choice that should always be considered as having been the majority result of a vote and updates the relevant logic in blockchain accordingly to respect it. { _sounds dangerous so explain that it is done for sanity/testing and there's a check that prevents its use on mainnet_ }
-- { _mention https://github.com/decred/dcrd/pull/3049 because building on both OpenBSD and riscv64 is interesting_ }
+- Switch to new [atomic types](https://github.com/decred/dcrd/pull/3053) in unexported modules thanks to Go 1.19. This makes the code less prone to human error and a bit less verbose. Exported modules are upgraded in a [separate PR](https://github.com/decred/dcrd/pull/3054) which will be merged later to [not force the consumers](https://github.com/decred/dcrd/pull/3054#issuecomment-1428189607) to newer Go versions too soon.
+- Added a network parameter to [force consensus votes](https://github.com/decred/dcrd/pull/3060) to certain outcomes and activate their features accordingly. This has already been used on testing networks to quickly test features without going through an entire voting process. The way it worked though was found to be surprising behavior: "if deployment is not found in parameters for a given network, it is considered active". Other issues included complexity of testing the voting process itself, and such implicitly forced vote outcomes being invisible in commands like `getblockchaininfo`. All these issues were fixed and it is now easier to locate forced rules in the code. A safety check was also added to ensure the forced vote choices cannot be used on the main network.
+- Fixed building on OpenBSD on [riscv64](https://github.com/decred/dcrd/pull/3049) CPU architecture.
 - { _dep upgrades https://github.com/decred/dcrd/pull/3050 - keep PR numbers for Ctrl+F search and remove in the final polish round_ }
-- { _Go 1.20 https://github.com/decred/dcrd/pull/3052_ }
-- { _https://github.com/decred/dcrd/pull/3061 minor_ }
+- Updated build infra and docs for [Go 1.20](https://github.com/decred/dcrd/pull/3052) and dropped support for Go 1.18.
+- Preapared a new version of the [`apbf` module](https://github.com/decred/dcrd/pull/3061) (Age-Partioned Bloom Filters) with updated `siphash` dependency { _minor_ }
 
-Connection Manager:
+Connection manager:
 
-- Updated the [atomic connection](https://github.com/decred/dcrd/pull/3055) request ID field. This adds additional synchronization logic to the code that conditionally updates the ID of an existing connection request when one hasn't already been assigned to help prevent any potential logic races that could inadvertently be introduced in future code updates. { _maybe simplify a bit_ }
+- Updated [connection request](https://github.com/decred/dcrd/pull/3055) tracking to prevent concurrency bugs.
 
-docker:
+Docker:
 
-- Added the ability to build [versioned docker images](https://github.com/decred/dcrd/pull/3048).
-- Added another 'RUN' command to the docker image to display the [dcrctl version output](https://github.com/decred/dcrd/pull/3062) in addition to the dcrd version. { _simplify, 'RUN' command is too specific Docker internal_ }
-- { _https://github.com/decred/dcrd/pull/3063 minor_ }
+- Added the ability to build [Docker images](https://github.com/decred/dcrd/pull/3048) for a specific Git version.
+- Print the [dcrctl version](https://github.com/decred/dcrd/pull/3062) in addition to the dcrd version since they come from separate repositories now.
+- Updated the Docker image to use [Go 1.20.1](https://github.com/decred/dcrd/pull/3063). { _minor_ }
 
-Chain-Config:
+Chain сonfig:
 
-- Reworked the [deployment validation logic](https://github.com/decred/dcrd/pull/3056) that runs at initialization time to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. { _explain word 'deployment'_ }
-- Reworked the [deployment validation tests](https://github.com/decred/dcrd/pull/3056) to make them more consistent with modern practices in the code as well as to simplify them and make them more flexible by moving the primary logic for all of the expected results into the test definitions themselves. { _simplify_ }
-- Now enforces [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. { _explain the scope of 'globally unique' and term 'agenda'_ }
+- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" or "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _is it correct to say deployment == agenda for simplicity?_ }
+- Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
 
 Blockchain:
 
-- Simplified the [threshold state determination](https://github.com/decred/dcrd/pull/3059) for various deployments. { _explain 'threshold state' or reword_ }
+- Simplified code that determines the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
 - Removed unused [database update tracking](https://github.com/decred/dcrd/pull/3065). { _minor_ }
 
 { _group all deployment stuff in one list_ }
