Dev dcrd regroup changes

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -92,18 +92,13 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-General:
+Most changes focused on making consensus deployment code more robust and easier to understand:
 
-- Switch to new [atomic types](https://github.com/decred/dcrd/pull/3053) in unexported modules thanks to Go 1.19. This makes the code less prone to human error and a bit less verbose. Exported modules are upgraded in a [separate PR](https://github.com/decred/dcrd/pull/3054) which will be merged later to [not force the consumers](https://github.com/decred/dcrd/pull/3054#issuecomment-1428189607) to newer Go versions too soon.
+- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" or "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _is it correct to say deployment == agenda for simplicity?_ }
+- Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
+- Simplified code that determines the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
+- Removed unused [database update tracking](https://github.com/decred/dcrd/pull/3065). { _minor_ }
 - Added a network parameter to [force consensus votes](https://github.com/decred/dcrd/pull/3060) to certain outcomes and activate their features accordingly. This has already been used on testing networks to quickly test features without going through an entire voting process. The way it worked though was found to be surprising behavior: "if deployment is not found in parameters for a given network, it is considered active". Other issues included complexity of testing the voting process itself, and such implicitly forced vote outcomes being invisible in commands like `getblockchaininfo`. All these issues were fixed and it is now easier to locate forced rules in the code. A safety check was also added to ensure the forced vote choices cannot be used on the main network.
-- Fixed building on OpenBSD on [riscv64](https://github.com/decred/dcrd/pull/3049) CPU architecture.
-- { _dep upgrades https://github.com/decred/dcrd/pull/3050 - keep PR numbers for Ctrl+F search and remove in the final polish round_ }
-- Updated build infra and docs for [Go 1.20](https://github.com/decred/dcrd/pull/3052) and dropped support for Go 1.18.
-- Preapared a new version of the [`apbf` module](https://github.com/decred/dcrd/pull/3061) (Age-Partioned Bloom Filters) with updated `siphash` dependency { _minor_ }
-
-Connection manager:
-
-- Updated [connection request](https://github.com/decred/dcrd/pull/3055) tracking to prevent concurrency bugs.
 
 Docker:
 
@@ -111,17 +106,14 @@ Docker:
 - Print the [dcrctl version](https://github.com/decred/dcrd/pull/3062) in addition to the dcrd version since they come from separate repositories now.
 - Updated the Docker image to use [Go 1.20.1](https://github.com/decred/dcrd/pull/3063). { _minor_ }
 
-Chain сonfig:
+Other:
 
-- Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" or "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details. { _is it correct to say deployment == agenda for simplicity?_ }
-- Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
-
-Blockchain:
-
-- Simplified code that determines the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
-- Removed unused [database update tracking](https://github.com/decred/dcrd/pull/3065). { _minor_ }
-
-{ _group all deployment stuff in one list_ }
+- Switch to new [atomic types](https://github.com/decred/dcrd/pull/3053) in unexported modules thanks to Go 1.19. This makes the code less prone to human error and a bit less verbose. Exported modules are upgraded in a [separate PR](https://github.com/decred/dcrd/pull/3054) which will be merged later to [not force the consumers](https://github.com/decred/dcrd/pull/3054#issuecomment-1428189607) to newer Go versions too soon.
+- Updated [connection request](https://github.com/decred/dcrd/pull/3055) tracking to prevent concurrency bugs.
+- Fixed building on OpenBSD on [riscv64](https://github.com/decred/dcrd/pull/3049) CPU architecture.
+- { _dep upgrades https://github.com/decred/dcrd/pull/3050 - keep PR numbers for Ctrl+F search and remove in the final polish round_ }
+- Updated build infra and docs for [Go 1.20](https://github.com/decred/dcrd/pull/3052) and dropped support for Go 1.18.
+- Preapared a new version of the [`apbf` module](https://github.com/decred/dcrd/pull/3061) (Age-Partioned Bloom Filters) with updated `siphash` dependency { _minor_ }
 
 
 ### dcrwallet
