Dev till cspp - tweak text

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -135,7 +135,7 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 
 { _Check_ https://github.com/decred/dcrctl/commits/master }
 
-- Updated [dependencies](https://github.com/decred/dcrctl/pull/54) to latest modules.
+- Updated [dependencies](https://github.com/decred/dcrctl/pull/54) to latest modules. This allows building on OpenBSD riscv64 and also significantly reduces the indirect dependencies.
 
 
 ### Decrediton
@@ -144,9 +144,9 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-In Progress:
+In progress:
 
-- [Update to React v18.](https://github.com/decred/decrediton/pull/3851)
+- [Update to React v18](https://github.com/decred/decrediton/pull/3851). It may require big changes but should bring performance improvements.
 
 
 ### vspd
@@ -155,9 +155,10 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
-- Improvements to [VSP closed checks](https://github.com/decred/vspd/pull/369) so that they occur before dcrd/dcrwallet/database clients are initialized, preventing possible errors. { _reword to clarify "VSP closed"_ }
+- Check if the [VSP is closed](https://github.com/decred/vspd/pull/369) much earlier, before dcrd/dcrwallet/database clients are initialized. This is more efficient and prevents possible errors.
+- Updated to [Go 1.20](https://github.com/decred/vspd/pull/368).
 - Tests are now run as [sub-tests](https://github.com/decred/vspd/pull/365) to enable better reporting of test results and metrics.
-- Added tests for [error handling](https://github.com/decred/vspd/pull/363) in the client that ensure vspd errors are correctly wrapped as 'types.ErrorResponse', and non-vspd errors contain adequate information for debugging. { _maybe simplify Go details a bit_ }
+- Added tests for [error handling](https://github.com/decred/vspd/pull/363) in the client that ensure vspd errors are correctly wrapped, and non-vspd errors contain adequate information for debugging. { _maybe simplify Go details a bit_ }
 - Removed [dcrstakepool instructions](https://github.com/decred/vspd/pull/370) from documentation as it is now defunct.
 - Fixes to [config log levels](https://github.com/decred/vspd/pull/371). { _minor_ }
 
@@ -168,9 +169,9 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 { _Check_ https://github.com/decred/cspp/commits/master }
 
-- { somewhat notable https://github.com/decred/cspp/pull/69 }
-- Added a [csppsolver command](https://github.com/decred/cspp/pull/86) and solverrpc package. This will allow pure-Go processes to run a solver built with cgo. { _check commit message (not PR) for a couple more clues_ }
-- { https://github.com/decred/cspp/pull/87 }
+- Updated CI to build on Ubuntu 22 with latest [flint2](https://github.com/decred/cspp/pull/69) math [library](http://www.flintlib.org/). 
+- Added a [`solverrpc` package](https://github.com/decred/cspp/pull/86) as a drop-in replacement for existing `solver`. It allows to extract the interaction with C code (the flint2 math library) into a separate background process called `csppsolver` and talk to that process from pure Go code, which is more flexible.
+- Added [build flags](https://github.com/decred/cspp/pull/87) that allow to build an entirely standalone `csppsolver` executable with flint2 library embedded in it. Distributing such executable removes the need to install flint2. { _maybe simplify a bit further_ }
 
 
 ### DCRDEX
