Ann DEX and BR tweaks

--- a/journal/202302.md
+++ b/journal/202302.md
@@ -14,13 +14,15 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - Decred turned 7 years
 
-- DEX v0.5.9 release
+- DEX v0.5.9 bugfix and polish release, v0.6 getting close
 
 - Bison Relay v0.1.4 release
 
-- Oprah bot - clarify with someone familiar if it is a real opportunity to earn
+- Oprah tipping bot on BR
 
 - Timestamply redesign is live
+
+- Any other?
 
 }
 
@@ -50,26 +52,31 @@ v0.5.9 was released with v0.6 just around the corner to enable automatically dep
 
 - Improved client database compaction to save disk space.
 - More accurate swap fee estimates.
-- Zero fee swaps are prevented.
+- Protections against zero fee swaps.
 - Improved performance.
 - Cleaned up logging.
 - Fixed about a dozen of edge cases.
 
-Full release notes and standalone DEX app downloads can be found [here](https://github.com/decred/dcrdex/releases). Hashes and signatures files are included that allow to [verify](https://docs.decred.org/advanced/verifying-binaries) the downloads have not been damaged or modified by third parties.
+Full release notes and standalone DEX app downloads can be found [here](https://github.com/decred/dcrdex/releases). Hashes and signatures are included that allow to [verify](https://docs.decred.org/advanced/verifying-binaries) the downloads have not been damaged or modified by third parties.
 
 
 ## Bison Relay v0.1.4 Release
 
-{ highlights, links, video overview Yz-IPu00eDc }
+Bison Relay received another quality of life update with v0.1.4:
 
 - Everything works faster.
-- Streamlined downloading process at the [downloads page](https://bisonrelay.org/download/).
 - Adjustable font size.
 - Image and link attachments.
 - Tipping bot that rewards authors of valuable content.
 - Right-side panel for easier access to actions on users and group chats.
 - More robust key exchange maintenance.
 - Many other UX improvements.
+
+Short video overview of new features is available [here](https://www.youtube.com/watch?v=Yz-IPu00eDc).
+
+Get the latest release on the improved [downloads page](https://bisonrelay.org/download/).
+
+Bug reports and feedback are welcome in [GitHub issue tracker](https://github.com/companyzero/bisonrelay/issues) and the [#br](https://chat.decred.org/#/room/#br:decred.org) Matrix chat.
 
 
 ## Development
